<resources>
    <string name="google_server_key">AIzaSyCJMjzg5a3znBQiehayFRY6HGYfqScrvuY</string>
    <string name="app_name">VulcaNice</string>
    <string name="home">Home Page</string>
    <string name="title">Vulcanice</string>
    <string name="app_title">VULCANICE</string>
    <string name="db_error">Unable to process your request\nPlease try again later</string>

    <string name="vcn_logout">Logout</string>
    <string name="vcn_signin">Sign In</string>
    <string name="vcn_signup">Sign Up</string>
    <string name="vcn_join">Join</string>

    <string name="vcn_vulcanice_inc">VulcaNice ™</string>

    <string name="vcn_online">Online</string>
    <string name="vcn_offline">Offline</string>
    <string name="title_activity_map_tracking">Map</string>
    <!--
        SHOP_CREATION
    -->
    <string name="vcn_shop_name">Name</string>
    <string name="vcn_shop_description">Address</string>
    <string-array name="vcn_shop_type">
        <item>Vulcanizing Station</item>
        <item>Gasoline Station</item>
        <item>Both</item>
    </string-array>

    <string name="vcn_shop_create">Create Shop</string>
    <string name="db_gas">gasStation</string>
    <string name="db_vul">vulcanizeStation</string>
    <string name="db_both">both</string>
    <!--
        navigation
    -->
    <string name="vcn_account_info">Account Information</string>
    <string name="vcn_add_gas_station">Add Gas Station</string>
    <string name="vcn_add_vul_station">Add Vulanizing Shop</string>
    <string name="vcn_manage_shop">Manage Shops</string>

    <!--
        SIGN_UP
    -->
    <string-array name="vcn_user_types">
        <item>Client</item>
        <item>Shop Owner</item>
    </string-array>
    <string name="vcn_pwd_hint">Enter your password</string>
    <string name="vcn_email_hint">Enter your Email Address</string>
    <string name="vcn_name_hint">Enter your Full Name</string>
    <string name="vcn_link_to_login">Click to Login</string>
    <string name="vcn_forgot_password">Forgot Password?</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_customer_map">Map</string>

    <string name="instant_validation">(instant validation)</string>
    <!--
        Dashboard_1
    -->
    <string name="vcn_get_nearest_vul">Vulcanizing Shop</string>
    <string name="vcn_get_nearest_gas">Gas Station</string>

    <!--
        Drawer
    -->
    <string name="vcn_open">Open</string>
    <string name="vcn_close">Close</string>

    <string name="image_url">gs://vulcanice-72c4e.appspot.com/images/</string>

    <!--
        Verify Phone
    -->
    <string name="placeholder_enter_verification_code">Enter verification code</string>
    <string name="btn_resend_verification_code">Resend Code</string>
    <string name="btn_verify_mobile">Verify</string>
    <string name="verification_quota_reached">Too many requests, please try again later</string>
    <!--
        Requests
    -->
    <string name="no_request">No request/s available</string>
    <string-array name="vcn_vehicle_type">
        <item>Car</item>
        <item>Van</item>
        <item>Bus</item>
        <item>Truck</item>
        <item>Motorbike</item>
    </string-array>
    <string-array name="vcn_pickup_type">
        <item>Tow</item>
        <item>Drop</item>
    </string-array>
</resources>
