<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorLight"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/vcn_shop_name" />
        </android.support.design.widget.TextInputLayout>
        <!-- Description Label -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_shop_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/vcn_shop_description" />
            </android.support.design.widget.TextInputLayout>
        </ScrollView>
        <!-- SHOP_TYPE DROPDOWNS -->
        <Spinner
            android:id="@+id/spinner_shop_type"
            android:layout_marginTop="24dp"
            android:entries="@array/vcn_shop_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
        <!-- Create Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_shop_create"
            android:background="@color/colorSemiLight"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/vcn_shop_create"/>
    </LinearLayout>
</ScrollView>
